--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "elliptic": ">=6.5.4",
     "glob": "^7.1.6",
     "minimist": "^1.2.5",
-    "mvc-scryptlib": "^1.0.0",
+    "mvc-scrypt": "^0.1.0",
     "watch": "^1.0.2"
   },
   "devDependencies": {
